--- a/003ProjetoUrnaEletronica/client/css/style.css
+++ b/003ProjetoUrnaEletronica/client/css/style.css
@@ -1,12 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap'); /*Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+/*Google Fonts*/
 
-*{                                                          /*Configurações Globais*/
+* {
+    /*Configurações Globais*/
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     background-color: #e0e0e0;
     height: 100vh;
     display: grid;
@@ -14,27 +16,28 @@ body{
     align-items: center;
 }
 
-main{
+main {
     min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50px;
     background: #e0e0e0;
-    box-shadow:  20px 20px 60px #bebebe,
-                 -20px -20px 60px #ffffff;
+    box-shadow: 20px 20px 60px #bebebe,
+        -20px -20px 60px #ffffff;
     width: 500px;
     margin: auto;
 }
 
-h1{
+h1 {
     text-align: center;
     font-size: 2.5em;
     color: #272727;
     margin-bottom: 30px;
 }
 
- .container{                    /* Container Input e Botões  */
+.container {
+    /* Container Input e Botões  */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -42,7 +45,7 @@ h1{
     font-size: 1.2em;
 }
 
-input{
+input {
     color: black;
     font-size: 1.3em;
     padding: 5px;
@@ -55,20 +58,20 @@ input{
 
 /* Section Candidato */
 
-.candidato{
+.candidato {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.nomeCandidato{
+.nomeCandidato {
     margin-bottom: 20px;
     margin-top: 10px;
     font-weight: bold;
 }
 
-img{
+img {
     max-width: 170px;
     background-color: white;
     padding: 20px;
@@ -77,7 +80,7 @@ img{
 
 /* Botões / Hover dos Botões */
 
-.actionsUrna{
+.actionsUrna {
     display: flex;
     flex-direction: row-reverse;
     gap: 15px;
@@ -86,7 +89,7 @@ img{
     width: 100%;
 }
 
-button{
+button {
     margin-top: 25px;
     font-weight: bolder;
     text-align: center;
@@ -101,30 +104,79 @@ button{
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.391);
 }
 
-button:hover{
+button:hover {
     transition: all .2s ease;
 }
 
-.confirma{
+.confirma {
     background-color: #7ac343;
 }
 
-.confirma:hover{
+.confirma:hover {
     background-color: #5a9031;
     color: #e0e0e0;
 }
 
-.corrige{
+.corrige {
     background-color: #f03139;
     color: #e0e0e0;
 }
 
-.corrige:hover{
+.corrige:hover {
     background-color: #932328;
     color: white;
 }
 
-.branco:hover{
+.branco:hover {
     background-color: #bebebe;
     color: white;
+}
+
+/* Estilos para os modais */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 10px;
+    /* Borda arredondada */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Sombra suave */
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Estilo para desabilitar elementos */
+.disabled {
+    pointer-events: none;
+    background-color: #c1c1c1;
+    /* Impede interação do usuário */
+    opacity: 0.6;
+    /* Opacidade reduzida para indicar que está desabilitado */
 }
