remoção estilo padrão do input

--- a/003 - Projeto Urna Eletronica/client/css/style.css
+++ b/003 - Projeto Urna Eletronica/client/css/style.css
@@ -28,6 +28,7 @@ main {
     width: 500px;
     margin: auto;
     position: relative;
+    padding: 30px;
 }
 
 h1 {
@@ -192,20 +193,28 @@ button:hover {
     text-align: center;
     font-weight: bold;
     position: absolute;
-    right: 12%;
-    bottom: 27.5%;
+    right: 15%;
+    bottom: 29.5%;
     cursor: pointer;
     z-index: 1;
 }
 
 #modalCandidatos {
-    display: none;
-    position: fixed;
-    bottom: 35%;
-    right: 23%;
+    position: absolute;
+    bottom: 27%;
+    right: -32%;
     z-index: 0;
 }
 
 #modalCandidatos p {
     font-size: 1.1em;
+}
+
+input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+    
+}
+input[type=number] { 
+   -moz-appearance: textfield;
+   appearance: textfield;
 }
